--- a/typing.html
+++ b/typing.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1 id="word">Click START</h1>
-        <h2 id="back">FINISH</h2>
+        <h1 id="word">Click to START</h1>
+        <h2 id="timer"> </h2>
+        <a href="file:///Users/yasuirikunari/Desktop/Js_1/typing.html" id="back">BACK</a>
         <div id="level" class="level">
             <p>Lv.1</p>
             <p>Lv.2</p>
