--- a/typing.html
+++ b/typing.html
@@ -8,7 +8,7 @@
     <body>
         <h1 id="word">Click to START</h1>
         <h2 id="timer"> </h2>
-        <a href="file:///Users/yasuirikunari/Desktop/Js_1/typing.html" id="back">BACK</a>
+        <a href="" id="back">BACK</a>
         <div id="level" class="level">
             <p>Lv.1</p>
             <p>Lv.2</p>
