--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <body>
         <h1 id="word">Click to START</h1>
         <h2 id="timer"> </h2>
-        <a href="https://rikuya0407.github.io/rikuya_typinggame/" id="back">BACK</a>
+        <a href="
+        https://rikuya0407.github.io/rikuya_typinggame/" id="back">BACK</a>
         <div id="level" class="level">
             <p>Lv.1</p>
             <p>Lv.2</p>
